[package]
name = "rustls-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.7"
webpki-roots = "0.22"
tokio-rustls = "0.23.4"
quinn = "0.8.5"
tokio = {version = "1.13.1", features = ["full", "test-util"]}
anyhow = "1.0"
futures = "0.3.14"
